adding 7 more components

--- a/public/index.html
+++ b/public/index.html
@@ -1,110 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
 
-    <!-- USING BOOTSTRAP LIB START-->
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
 
-    <link rel="shortcut icon" type="image/png" href="./static/assets/images/icon/favicon.ico">
-    <link rel="stylesheet" href="./static/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./static/assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./static/assets/css/themify-icons.css">
-    <link rel="stylesheet" href="./static/assets/css/metisMenu.css">
-    <link rel="stylesheet" href="./static/assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="./static/assets/css/slicknav.min.css">
-    <link rel="stylesheet" href="./static/css/client_listing.css">
-    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css"media="all"/>
-    <!-- others css -->
-    <link rel="stylesheet" href="./static/assets/css/typography.css">
-    <link rel="stylesheet" href="./static/assets/css/default-css.css">
-    <link rel="stylesheet" href="./static/assets/css/styles.css">
-    <link rel="stylesheet" href="./static/assets/css/responsive.css">
-    <!-- modernizr css -->
-    <script src="./static/assets/js/vendor/modernizr-2.8.3.min.js"></script>
+  <!-- USING BOOTSTRAP LIB START-->
 
-    <link rel="stylesheet" href="./static/css/client_listing.css">
+  <link rel="shortcut icon" type="image/png" href="./static/assets/images/icon/favicon.ico">
+  <link rel="stylesheet" href="./static/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./static/assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./static/assets/css/themify-icons.css">
+  <link rel="stylesheet" href="./static/assets/css/metisMenu.css">
+  <link rel="stylesheet" href="./static/assets/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="./static/assets/css/slicknav.min.css">
+  <link rel="stylesheet" href="./static/css/client_listing.css">
+  <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
+  <!-- others css -->
+  <link rel="stylesheet" href="./static/assets/css/typography.css">
+  <link rel="stylesheet" href="./static/assets/css/default-css.css">
+  <link rel="stylesheet" href="./static/assets/css/styles.css">
+  <link rel="stylesheet" href="./static/assets/css/responsive.css">
+  <!-- modernizr css -->
+  <script src="./static/assets/js/vendor/modernizr-2.8.3.min.js"></script>
 
-    <!-- bootstrap css -->
-    <link rel="stylesheet" type="text/css" href="./static/client/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./static/css/client_listing.css">
+
+  <!-- bootstrap css -->
+  <link rel="stylesheet" type="text/css" href="./static/client/css/bootstrap.min.css">
 
 
-    <!-- client-listing -->
+  <!-- client-listing -->
 
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css">
 
-    <!-- CLOSED -->
+  <!-- CLOSED -->
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Shaping</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>Shaping</title>
+</head>
 
-    <script src="./static/assets/js/vendor/jquery-2.2.4.min.js"></script>
-    <!-- bootstrap 4 js -->
-    <script src="./static/assets/js/popper.min.js"></script>
-    <script src="./static/assets/js/bootstrap.min.js"></script>
-    <script src="./static/assets/js/owl.carousel.min.js"></script>
-    <script src="./static/assets/js/metisMenu.min.js"></script>
-    <script src="./static/assets/js/jquery.slimscroll.min.js"></script>
-    <script src="./static/assets/js/jquery.slicknav.min.js"></script>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
 
-    <!-- start chart js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-    <!-- start highcharts js -->
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <!-- start zingchart js -->
-    <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
-    <script>
-        zingchart.MODULESDIR = "https://cdn.zingchart.com/modules/";
-        ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "ee6b7db5b51705a13dc2339db3edaf6d"];
-    </script>
-    <!-- all line chart activation -->
-    <script src="./static/assets/js/line-chart.js"></script>
-    <!-- all pie chart -->
-    <script src="./static/assets/js/pie-chart.js"></script>
-    <!-- others plugins -->
-    <script src="./static/assets/js/plugins.js"></script>
-    <script src="./static/assets/js/scripts.js"></script>
+  <script src="./static/assets/js/vendor/jquery-2.2.4.min.js"></script>
+  <!-- bootstrap 4 js -->
+  <script src="./static/assets/js/popper.min.js"></script>
+  <script src="./static/assets/js/bootstrap.min.js"></script>
+  <script src="./static/assets/js/owl.carousel.min.js"></script>
+  <script src="./static/assets/js/metisMenu.min.js"></script>
+  <script src="./static/assets/js/jquery.slimscroll.min.js"></script>
+  <script src="./static/assets/js/jquery.slicknav.min.js"></script>
 
-
-    <!-- client -->
-
-    <!-- js jquery -->
-    <!-- <script src="{% static 'client/js/jquery.js' %}"></script> -->
-
-    <!-- js bootstrap -->
-    <script src="./static/client/js/bootstrap.js"></script>
-
-    <!-- Main JS-->
-    <!-- <script src="{% static 'client/js/global.js' %}"></script> -->
-
-    <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap/3/css/bootstrap.css" />
-
-    <!-- Include Date Range Picker -->
-    <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
+  <!-- start chart js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+  <!-- start highcharts js -->
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+  <!-- start zingchart js -->
+  <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
+  <script>
+    zingchart.MODULESDIR = "https://cdn.zingchart.com/modules/";
+    ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "ee6b7db5b51705a13dc2339db3edaf6d"];
+  </script>
+  <!-- all line chart activation -->
+  <script src="./static/assets/js/line-chart.js"></script>
+  <!-- all pie chart -->
+  <script src="./static/assets/js/pie-chart.js"></script>
+  <!-- others plugins -->
+  <script src="./static/assets/js/plugins.js"></script>
+  <script src="./static/assets/js/scripts.js"></script>
 
 
+  <!-- client -->
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+  <!-- js jquery -->
+  <!-- <script src="{% static 'client/js/jquery.js' %}"></script> -->
+
+  <!-- js bootstrap -->
+  <script src="./static/client/js/bootstrap.js"></script>
+
+  <!-- Main JS-->
+  <!-- <script src="{% static 'client/js/global.js' %}"></script> -->
+
+  <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap/3/css/bootstrap.css" />
+
+  <!-- Include Date Range Picker -->
+  <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
 
 
 
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+
+
+
+</body>
+
 </html>
